did the chainges for introduction

--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -1,29 +1,30 @@
 \chapter{Introduction}
-Theoretical condensed matter research is plagued by a fundamental issue of complexity. The shear amount of degrees of freedom in a material of any technologically relevant scale are overwhelming (i.e. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researches in the field to make as many approximations as possible, as to make the problem tractable, while not losing the ability to describe the essential physics causing the fundamentally and technologically interesting effects.
+Theoretical condensed matter research is plagued by a fundamental issue of complexity. The shear amount of degrees of freedom in a material of any technologically relevant scale is overwhelming (i.e. $\sim10^{23}$ electrons per cm$^3$), and make it impossible to describe the quantum mechanical wavefunction exactly \lp{there is some more nice things along this line in Wen}. This forces researchers in the field to make approximations, as to make the problem tractable, while still capturing the essential physics resulting in the effects under investigation.
 
-The way to make progress with this undertaking has always been to try and isolate the parts of the system that contribute the most. As is known, every system is governed fundamentally by its Hamiltonian energy. One could go so far as to say that if we would be able to exactly calculate all of its eigenvectors and eigenvalues, the field of consed matter would be completed. This is ofcourse impossible for reasons stated before.
+The way to make progress with this undertaking has always been to try and isolate the parts of the system that contribute the most. As is well known, every quantum mechanical system is governed fundamentally by its Hamiltonian. One could go so far as to say that if we would be able to exactly calculate all of its eigenvectors and eigenvalues, the field of consed matter would be completed. This is ofcourse impossible for reasons stated above.
 
-The full Hamiltonian can be decomposed into several contributions, which allows one to then keep the contributions that are supposed to be most important for the effect under study, while discarding the rest. For example, the elastic energy scales needed to completely break a material, while important for mechanical studies, are so much larger than those governing the movement of electrons through the material, that they can be discarded if we are only interested in the latter.
+The full Hamiltonian can be decomposed into several contributions, which allows one to focus on the most important contributions, while discarding the rest. For example, the elastic energy scales needed to completely break a material, while important for mechanical studies, are so much larger than those governing the movement of electrons through the material, that they can be discarded if we are only interested in the latter.
 
-What this means fundamentally is that we are separating the full Hillbert space of possible states that the full wavefunction system can assume into separate parts that each take care of different aspects of the full physics. A relevant example is that the ionic response of a material can be described by phonons, these contribute very little to currents that may flow through it. Thus, while the full wavefunction and Hillbert space contains both the phonons and electrons, we can split it up into both parts, with an interaction between them. If this interaction is zero, we can write the Hillbert of the full wavefunction as the product space of the two separate parts, and we can solve both separately.
+What this means fundamentally is that we are separating the full Hilbert space of possible states that the full wavefunction system can assume into separate parts that each take care of different aspects of the full physics. A relevant example is that the ionic response of a material can be described by phonons, these contribute very little to currents that may flow through it. Thus, while the full wavefunction and Hilbert space contains both the phonons and electrons, we can split it up into both parts, with an interaction between them. If this interaction is negligible, we can write the full wavefunction as the product of two parts in each of these spaces with no entanglement betwen them, and we can solve the physics of both parts separately.
 
-If this type of procedure is carried out systematically, at some point we end up with something that is actually solvable, which will hopefully describe the biggest part of the observed behavior. This is essentially how the field of condensed matter has progressed starting from the most fundamental quantum mechanical laws, first focusing on exactly solvable constituent problems, gradually adding complexity in order to describe gradually more complex physics.
+If this procedure is carried out systematically, at some point we end up with something that is actually solvable, which will hopefully describe the biggest part of the observed behavior. This is essentially how the field of condensed matter has progressed starting from the most fundamental quantum mechanical laws, first focusing on exactly solvable constituent problems, gradually adding complexity in order to describe more complex physics.
 
-In this Thesis we will focus on this step of taking two solved constituent problems, adding an interaction between them and observing what new physics emerge. In this case, the focus will lie on electronic, magnetic and structural properties of ferroic crystals. In some of these materials the interaction will turn them into so-called multiferroics. 
-There are three of these coupling interactions that will be discussed: spin-orbit coupling, exchange striction, and electrostriction.
+In general, projects contained in this Thesis will focus on this step of taking two solved constituent problems, adding an interaction between them and observing what new physics emerge. There are three of these coupling interactions that will be discussed: spin-orbit coupling (SOC), exchange striction, and electrostriction.
+The focus will lie on electronic, magnetic and structural properties of ferroic crystals. In some of these materials, where multiple ferroic orders coexist (so-called multiferroics), the interactions will allow to influence either ferroic order by perturbing the other. 
 
-The first one is a relativistic effect, that can often be ignored if one is interested in the electronic structure inside a crystal. In the case of GeTe, however, an anomalously large spin-splitting, the splitting of two normally degenerate spin states, was found in the bandstructure of a ferroelectric material.
-Another result of this interaction is a fundamental coupling between the crystalline lattice and magnetism if it's present. This causes the usually isotropic magnetic interactions when considering pure spin interactions to become highly anisotropic, i.e. directional. In Sr$_2$IrO$_4$ this leads to exotic magnetic configuration and effects.
+The SOC is a relativistic effect, that can often be ignored if one is interested in the electronic structure inside a crystal with light ions. In the case of GeTe, however, an anomalously large spin-splitting of two normally degenerate spin states, was found in the bandstructure of the ferroelectric material.
+Another result of this interaction is a fundamental coupling between the crystalline lattice and magnetism if it is present.
+This causes the usually isotropic magnetic interactions between the on-site spins, given by the Heisenberg exchange Hamiltonian $\sum_{<i,j>} J_{ij}\mathbf{S}_i \cdot \mathbf{S}_j$, to become highly anisotropic, i.e. the coupling between the components of the spins depends on the direction of the bond: $\sum_{<i,j>, \mu,\nu} J^{\mu\nu}_{ij} S^\mu_i S^\nu_j$ where $\mu,\nu = x,y,z$. We will investigate Sr$_2$IrO$_4$ in particular, where there is a strong SOC on the magnetic Ir atoms. 
 
-The second effect, magnetic exchange striction, causes magnetic interactions between localized spins to effect a change in the bond lengths between the ions they sit on. This leads to a coupling between the spins and phonons. Here we will highlight two specific situations. In the first a ferroelectric polarization (a $\bm{k} = \bm{0}$ phonon) emerges due to geometric frustration of anti-ferromagnetic ordering in GdMn$_2$O$_5$. The second situation is the well-known coupling between the spin density wave and charge density wave in elemental Chromium. In this case a peculiar nesting of the fermi-surfaces causes  the spin density wave to be stabilized, whereupon the exchange striction causes the charge density wave to appear.  
-It is this coupling that allows a very high degree of control in ultrafast photoexcitation experiments, where the excitation of the spin density wave causes in turn an excitation in the charge density wave. The latter can then be controlled very precisely by further pulses.
+The second effect we will highlight is magnetic exchange striction, which stems from the depence of exchange constants $J_{ij}$ on structural distortions, leading to a coupling between the spins and phonons. This leads to a modulation of the magnetic configuration when phonons are present in the material, and vice versa to the creation of phonons when the magnetic interaction can gain energy if bond lengths are varied. Here we will highlight two specific situations. In the first, a ferroelectric polarization (a $\bm{k} = \bm{0}$ phonon) emerges due to geometric frustration of anti-ferromagnetic ordering in GdMn$_2$O$_5$. The second situation is the well-known coupling between the spin density wave and charge density wave in elemental Chromium. In this case a peculiar nesting of the fermi-surfaces restuls in a spin density wave to be stabilized, whereupon the exchange striction creates a charge density wave.  
+It is this interaction that opens the path to a very precise control in ultrafast photoexcitation experiments of these collective modes, where the excitation of the spin density wave causes in turn an excitation in the charge density wave. The latter can then be controlled very precisely by further pulses, as is demonstrated in our work.
 
-Lastly the coupling between strain and ferroelectricity will be carefully studied in BaTiO$_3$. This is one of the most well-known ferroelectric materials harboring a wide variety of ferroelectric phases, with very large polarization. Interestingly the coupling under discussion leads to a noticeable mechanical softening of 180$^\circ$ ferroelectric domain walls. This is not straight forward as the domain wall does not separate two domains with different strain values, so it is not a priori clear why a purely ferroelectric wall appears softer. We will show that the electrostriction leads to a strain profile close to the wall which can interact with an applied tip, bending the wall towards it and thus appearing softer. 
+Lastly, the interaction between strain and ferroelectricity will be carefully studied in 180$^\circ$ domain walls in BaTiO$_3$. This is one of the most well-known ferroelectric materials harboring a wide of ferroelectric phases, with very large polarization. Interestingly the coupling under discussion leads to a noticeable mechanical softening of 180$^\circ$ ferroelectric domain walls. This is not straight-forward as the domain wall is not ferroelastic, i.e. it separates two domains with the same values for the strain tensor, making it not a priori clear why the purely ferroelectric wall appears softer. We will show that the electrostriction leads to a strain profile close to the wall which can interact with an atomic force microscopy tip, bending the wall towards it and thus appearing softer. 
 
-Aside from the purely academic interest in understanding these interactions between separate parts of the systems, they also hold promise from a technological point of view. Due to these couplings, as was alluded to before, it is possible to influence one part by perturbing the other. It is often the case that the control of one part is technologically useful, but either impossible or not very efficient. The most brought up case is that of hard disks, where the ferromagnetic domains that store the data need to be reoriented by applying an external magnetic field, making it rather inefficient and limiting the data density. If one would be able, however, to control the direction of the magnetic domain by applying an electric field this would dramatically increase the efficiency. This is why multiferroics such as in our case GdMn$_2$O$_5$, are so interesting. Due to the coupling between the ferroelectric polarization to the magnetization, one can change the latter by applying an electric field to the former.
-In the case of GeTe, as will discussed more carefully later, the spin polarization of the bands closest to the fermi level can be changed by change the direction of the ferroelectric polarization, thus theoretically allowing for a Datta Das transistor \lp{citation!}, allowing only a particular spin-polarized current to flow through the material.
+Aside from the purely academic interest, these interactions between separate parts of the systems also hold promise from a technological point of view. Due to these cross-couplings between degrees of freedom, as was alluded to before, it is possible to influence one part by perturbing the other. The most brought up case is that of hard disks, where the ferromagnetic domains that store the data need to be reoriented by applying an external magnetic field, making it rather inefficient due to heating and limiting the data density caused by magnetic stray fields influencing multiple domains. If one would be able, however, to control the magnetic domains by applying an electric field, this would dramatically increase the efficiency. This is what makes multiferroics such as in our case GdMn$_2$O$_5$, are so interesting. The coupling between the ferroelectric polarization and magnetization in the material causes one to be able to change the latter by applying an electric field to the former. A thorough understanding of the switching behavior in this material is of paramount importance to utilize this effect efficiently.
+In the case of GeTe, as will discussed later, the spin polarization of the bands closest to the fermi level depend the direction of the ferroelectric polarization, thus theoretically allowing for a Datta Das transistor \lp{citation!}, allowing only a particular spin-polarized current to flow through the material.
 
-In the case of the ferroelectric domain walls, these are very often \lp{hmm not s ure how to angle this, we're not really doing the "drag a wall by the tip" kind of stuff here}.
+In the case of the ferroelectric domain walls, the cross-coupling between strain and ferroelectricity allows to effectively move the ferroelectric domains by applying a strain field through a tip, due to the presence of very soft sliding modes. 
 
 \lp{rundown of chapters here}
 
